--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,43 @@
 }
 /* ----/RESET---- */
 /* ------------------------MIX-------------------- */
-
+.flex_display{
+  display: flex;
+}
 /* ------------------------/MIX-------------------- */
 body{
   font-family: 'Rubik', sans-serif;
   background-color: #3081ec;
-}
-.wrapper{
-  max-width: 50%;
-  background-color: white;
-  border: 2px solid black;
+  justify-content: center;
+  margin: 10px 0px;
 }
 .template{
   display: none;
+}
+.wrapper{
+  width: 480px;
+  background-color: white;
+  border: 2px solid black;
+  padding: 0px 5px 5px 5px;
+}
+.wrapper h1{
+  text-align: center;
+  height: 30px;
+}
+.container{
+  height: calc(100vh - 58px);
+  flex-direction: column;
+  justify-content: space-between;
+}
+.to_do_list li{
+  justify-content: space-between;
+  border-bottom: 1px solid #e0e0e0;
+  margin-top: 20px;
+}
+.container input{
+  background: #ccd0cb;
+  line-height: 30px;
+  border: none;
+  border-radius: 10px;
+  padding: 0 10px;
 }
